* Send a QUI with TL-1 during fatal STA disconnects
* Process most settings again
* [L#717858] Fix disconnection of users taking too long to log in
* [L#717858] Consider users as connected before they start the TLS handshake
* Add FO extension to hub INF
* Remove the license page from the installer

-- 2.7.0 2011-02-23 --
* Export PluginManager::attention to scripts
* Update Boost to version 1.45
* [L#537905] Add redhat init scripts (thanks E_zombie)
* [L#609436] Fix SCons warnings
* Save some memory by not pre-allocating read buffer
* [L#650587] Add NAT & RNT to the known commands
* [L#654218] Fix timer issues
* Propagate error codes
* Count write timeouts
* Start PHP and Ruby bindings
* [L#610321] Fix some warnings
* Fix an uninitialized member issue resulting in random behaviour
* [L#508641] Make bot disconnect asynchronous
* Re-add missing bloom stats
* [L#609435] Fix bloom race condition
* Add basic rules (sharesize, slots, etc...)
* Update user guide
* [L#521681] Pass reason in disconnect signal
* [L#491951] Fix messages not being sent

-- 2.5.2 2010-07-23 --
* Compiled with C++0x support
* Update Boost to version 1.43
* Improve Lua scripts
* More performant and less crash-prone timers

-- 2.5.1 2010-06-20 --
* [L#591701] Fix compiling out of the bzr repo
* Fix the "unloading" event which was never being called
* Unload scripts in the reverse order of addition
* Improve Lua scripts
* [L#596669] Disconnect ghosts

-- 2.5.0 2010-05-03 --
* Improve Lua scripts: various bug fixes, support PING
* Clients are disconnected with the DI flag of QUI
* Update to Lua 5.1.4
* Update to boost 1.42
* Better support of Python extensions
* Add an icon and version info to the Windows daemon
* Allow local IPs
* Bloom plugin: filter more TTH searches
* [L#427706] Fix some crashes
* Hub will automatically reject new users if its having bandwidth problems
* [L#502280] Fix Windows service
* Accept relative paths in config files
* [L#518972] Fix python memory leak
 